--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack --config webpack.config.js",
-    "start-dev-server": "webpack-dev-server",
+    "build": "webpack --config webpack.config.js",
+    "start": "webpack-dev-server",
     "test": "mocha --require babel-core/register ./test/launcher.js \"test/**/*(.js|.jsx)\"",
     "test:watch": "npm run test -- --watch"
   },
