--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "immutable": "^3.8.2",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
+    "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.4.2",
     "webpack": "^4.16.4",
     "webpack-dev-server": "^3.1.5"
