--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsdom": "^11.12.0",
     "mocha": "^5.2.0",
     "react-hot-loader": "^4.3.4",
+    "source-map-loader": "^0.2.3",
     "webpack-cli": "^3.1.0"
   },
   "babel": {
