--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.4.2",
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.4.2",
+    "react-router-dom": "^4.3.1",
     "webpack": "^4.16.4",
     "webpack-dev-server": "^3.1.5"
   },
