--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
+    "socket.io-client": "^2.1.1",
     "webpack": "^4.16.4",
     "webpack-dev-server": "^3.1.5"
   },
