--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test:watch": "npm run test -- --watch"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
+    "css-loader": "^1.0.0",
     "immutable": "^3.8.2",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
@@ -18,7 +20,9 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
     "socket.io-client": "^2.1.1",
+    "style-loader": "^0.22.1",
     "webpack": "^4.16.4",
     "webpack-dev-server": "^3.1.5"
   },
@@ -29,6 +33,7 @@
     "babel-preset-react": "^6.24.1",
     "chai": "^4.1.2",
     "chai-immutable": "^1.6.0",
+    "css-loader": "^1.0.0",
     "jsdom": "^11.12.0",
     "mocha": "^5.2.0",
     "react-hot-loader": "^4.3.4",
